# Meta-Vision-Solais

./: .gitignore  CMakeLists.txt  README.md
data/params/: 1280x1024.xml  1280x720.xml  640x360.json  640x360.xml  default.json  liuzikai-MacBook.local.json  meta-jetson-nano-1.json  meta-jetson-nano-2.json  meta-jetson-nano-3.json
doc/: Template.ui  message-table.md
extra/: CMakeLists.txt  Parameters.proto  Template.ui  parameters.txt
include/: AimingCalculator.h  AimingSolver.h  AnnotatedMat.h  ArmorDetector.h  ArmorSelector.h  ArmorSolver.h  CRC.h  Camera.h  Common.h  DataManager.h  DetectorTuner.h  Executor.h  FrameCounterBase.h  GStreamerCamera.h  ImageDataManager.h  ImageSet.h  InputSource.h  ModelTrainer.h  ParamSetManager.h  Parameters.h  PositionCalculator.h  Serial.h  TerminalParameters.h  TerminalSocket.h  Utilities.h  VideoSet.h  VideoSource.h
lib/: ArmorDetector.cpp  CMakeLists.txt  ModelTrainer.cpp
lib/mvsdk/: CMakeLists.txt  README.md  install.sh
lib/mvsdk/include/: CameraApi.h
lib/mvsdk/lib/macos/: libmvsdk.dylib
src/: AimingCalculator.cpp  AimingSolver.cpp  AnnotatedMat.cpp  ArmorDetector.cpp  ArmorSelector.cpp  ArmorSolver.cpp  CMakeLists.txt  CRC.cpp  Camera.cpp  DataManager.cpp  DetectorTuner.cpp  Executor.cpp  GStreamerCamera.cpp  ImageDataManager.cpp  ImageSet.cpp  MVCamera.cpp  OpenCVCamera.cpp  ParamSetManager.cpp  Parameters.proto  PositionCalculator.cpp  Serial.cpp  TerminalSocket.cpp  VideoSet.cpp  VideoSource.cpp
tools/: CMakeLists.txt
tools/Solais/: CMakeLists.txt  main.cpp
tools/SolaisTerminal/: AnnotatedMatViewer.cpp  AnnotatedMatViewer.h  AnnotatedMatViewer.ui  CMakeLists.txt  CollapsibleGroupBox.hpp  GeneratePhaseUI.py  MainWindow.cpp  MainWindow.h  MainWindow.ui  QAsioEventDispatcher.cpp  QAsioEventDispatcher.h  ValueUIBindings.hpp  main.cpp
tools/TakePhotoUsingCamera/: TakePhotoUsingCamera.cpp
tools/Utilities/: CMakeLists.txt  CameraCalibration.cpp  ExtractFrameFromVideo.cpp  TakePhotoUsingCamera.cpp
unit-tests/: ArmorSolverUnitTest.cpp  CMakeLists.txt  CameraBenchmark.cpp  GStreamerUnitTest.cpp  MVCameraOpenCVDemo.cpp  PositionCalculatorUnitTest.cpp  SerialUnitTest.cpp  TerminalSocketUnitTest.cpp
