if (TARGET libTerminalSocket)
    add_executable(TerminalSocketUnitTest TerminalSocketUnitTest.cpp)
    target_link_libraries(TerminalSocketUnitTest libTerminalSocket)
else()
    message(WARNING "=> Target TerminalSocketUnitTest is not available to build. Depends: libTerminalSocket")
endif ()


find_package(PkgConfig REQUIRED)
if (PkgConfig_FOUND)
    pkg_check_modules(ZBar IMPORTED_TARGET zbar)
endif()
if (ZBar_FOUND AND TARGET libArmorSolver)
    add_executable(ArmorSolverUnitTest ArmorSolverUnitTest.cpp)
    target_link_libraries(ArmorSolverUnitTest libArmorSolver PkgConfig::ZBar)
else()
    message(WARNING "=> Target ArmorSolverUnitTest is not available to build. Depends: ZBar, libArmorSolver")
endif ()